--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="0.01">
     <uses-sdk android:minSdkVersion="10"/>
     <application android:label="@string/app_name">
-        <activity android:name="Main"
+        <activity android:name=".Activities.Main"
+                  android:screenOrientation="landscape"
+                  android:configChanges="orientation"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
