--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
           package="donnu.zolotarev.savenewyear"
           android:versionCode="1"
           android:versionName="0.01">
-    <uses-sdk android:minSdkVersion="10"/>
+    <uses-sdk android:minSdkVersion="10"
+            android:targetSdkVersion="19"/>
     <application android:label="@string/app_name">
         <activity android:name=".Activities.Main"
                   android:screenOrientation="landscape"
