--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
             android:targetSdkVersion="19"/>
     <application android:label="@string/app_name">
         <activity android:name=".Activities.Main"
+                  android:icon="@drawable/icon"
                   android:screenOrientation="landscape"
                   android:configChanges="orientation"
                   android:label="@string/app_name">
