--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
           android:versionCode="1"
-          android:versionName="0.11">
-    <uses-sdk android:minSdkVersion="10"
+          android:versionName="0.1">
+    <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/icon"
+            >
         <activity android:name=".Activities.Main"
                   android:icon="@drawable/icon"
                   android:screenOrientation="landscape"
