--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,10 @@
           android:versionName="0.3">
     <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
+
+    <uses-permission android:name="com.android.vending.BILLING"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon"
             >
