--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
-          android:versionCode="4"
-          android:versionName="0.4">
+          android:versionCode="5"
+          android:versionName="0.5(test)">
     <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
 
@@ -23,5 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data
+                android:name="com.google.android.gms.games.APP_ID"
+                android:value="@string/app_id" />
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
     </application>
 </manifest> 
