--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
-          android:versionCode="5"
-          android:versionName="0.5(test)">
+          android:versionCode="4"
+          android:versionName="0.4.5">
     <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
 
@@ -29,5 +29,8 @@
         <meta-data
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version" />
+
+        <activity android:name="com.purplebrain.adbuddiz.sdk.AdBuddizActivity"
+                  android:theme="@android:style/Theme.Translucent" />
     </application>
 </manifest> 
