--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
-          android:versionCode="4"
-          android:versionName="0.4.5">
+          android:versionCode="6"
+          android:versionName="0.5.1 (test)">
     <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
 
     <uses-permission android:name="com.android.vending.BILLING"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon"
