--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
-          android:versionCode="6"
-          android:versionName="0.5.1 (test)">
+          android:versionCode="7"
+          android:versionName="0.6">
     <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
 
