--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
-          android:versionCode="8"
-          android:versionName="1.0">
+          android:versionCode="9"
+          android:versionName="1.1">
     <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
 
@@ -12,12 +12,14 @@
 
 
     <application android:label="@string/app_name"
+                 android:screenOrientation="landscape"
+                 android:configChanges="orientation"
                  android:icon="@drawable/icon"
             >
         <activity android:name=".Activities.Main"
                   android:icon="@drawable/icon"
                   android:screenOrientation="landscape"
-                  android:configChanges="orientation"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
