--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".Activities.Main"
                   android:icon="@drawable/icon"
                   android:screenOrientation="landscape"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -33,9 +33,8 @@
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version" />
 
-        <activity android:name="com.purplebrain.adbuddiz.sdk.AdBuddizActivity"
-                  android:theme="@android:style/Theme.Translucent" />
+
         <activity android:name="com.google.android.gms.ads.AdActivity"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode"/>
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 </manifest> 
