--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donnu.zolotarev.savenewyear"
-          android:versionCode="10"
+          android:versionCode="11"
           android:versionName="1.2">
     <uses-sdk android:minSdkVersion="9"
             android:targetSdkVersion="19"/>
@@ -32,6 +32,12 @@
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version" />
 
+        <meta-data android:name="com.revmob.app.id" android:value="@string/revmob_id"/>
+
+            <activity android:name="com.revmob.ads.fullscreen.FullscreenActivity"
+                android:theme="@android:style/Theme.Translucent"
+                android:configChanges="keyboardHidden|orientation">
+            </activity>
 
         <activity android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
